--- a/.config
+++ b/.config
@@ -197,7 +197,7 @@ CONFIG_EXTERNAL_CPIO=""
 # Root filesystem archives
 #
 # CONFIG_TARGET_ROOTFS_CPIOGZ is not set
-CONFIG_TARGET_ROOTFS_TARGZ=y
+# CONFIG_TARGET_ROOTFS_TARGZ is not set
 
 #
 # Root filesystem images
@@ -222,10 +222,10 @@ CONFIG_GRUB_BAUDRATE=115200
 CONFIG_GRUB_BOOTOPTS=""
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_TITLE="OpenWrt"
-CONFIG_ISO_IMAGES=y
+# CONFIG_ISO_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
-CONFIG_VMDK_IMAGES=y
-# CONFIG_TARGET_IMAGES_GZIP is not set
+# CONFIG_VMDK_IMAGES is not set
+CONFIG_TARGET_IMAGES_GZIP=y
 
 #
 # Image Options
